frontend/style.css
#cards-div {
  padding: 2rem;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

body {
  height: 100%;
  background-color: #58b3e775;
}

.user-card {
  padding: 1rem;
}

header {
  background-color: #3700ff7a;
}

.flip-card {
  background-color: transparent;
  width: 20rem;
  height: 20rem;
  perspective: 1000px;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: 100%;
  height: 100%;
  max-height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
  overflow-y: scroll;
  padding: .5rem;
  border: 5pt solid black;
  border-radius: 10%;
}

.flip-card-front {
  justify-content: space-evenly;
  background-color: #3700ff7a;
  color: black;
}

.card-title {
  justify-self: flex-start;
}

.card-img {
  width: 100%;
  max-height: 12rem;
  object-fit: contain;
}

.bold-card-text {
  font-weight: bold;
}

.flip-card-back {
  background-color: #3700ff7a;
  justify-content: space-between;
  color: black;
  transform: rotateY(180deg);
}

.email-link {
  justify-self: flex-end;
  color: black;
}

.find-a-match-button {
  margin-left: 1rem;
}

.select-parameters {
  margin-right: 1rem;
  background-color: #6c757d !important;
  color: white !important;
  border-color: #6c757d !important;
}

.search-bar {
  width: 20rem !important;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent; /* make scrollbar transparent */
}

footer {
  font-size: small;
  text-align: center;
  height: 110px;
  background-color: #3700ff7a;
  clear: both;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  bottom: 0;
  width: 100%;
}

.fa {
  padding: 10px;
  font-size: 8pt;
  width: 40px;
  text-align: center;
  text-decoration: none;
}

hr {
    margin: 0;
}

.fa:hover {
  opacity: 0.7;
}

.fa-facebook {
  background-color: #3b5998;
  color: white;
}

.fa-twitter {
  background-color: #55acee;
  color: white;
}

.fa-linkedin {
  background-color: #0077b5;
  color: white;
}

.fa-youtube {
  background-color: #e62117;
  color: white;
}

.footer-div-top {
    margin-top: 1rem;
    display: flex;
    justify-content: space-evenly;
}

.icon {
    margin-bottom: 1rem;
    border: 1pt solid black;
}

